--- a/index.html
+++ b/index.html
@@ -1,13 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>3D Landing Page</title>
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
     <img src="gradient.png" class="img-grad">
     <div class="layer-blur"></div>
@@ -18,16 +20,37 @@
 
             <nav class="d-flex gap-3">
                 <a href="#" class="text-decoration-none">COMPANIES</a>
-                <a href="#" class="text-decoration-none">SERVICES</a>
-                <a href="#" class="text-decoration-none">PEOPLE</a>
-                <a href="#" class="text-decoration-none">PLOTTING</a>
+                <a href="#" class="text-decoration-none">FEATURES</a>
+                <a href="#" class="text-decoration-none">RESOURCES</a>
+                <a href="#" class="text-decoration-none">DOCS</a>
             </nav>
 
-            <button class="btn btn-primary btn-sign">SIGN IN</button>
+            <button class="btn-sign">SIGN IN</button>
         </header>
+
+        <main class="d-flex flex-column justify-content-center">
+            <div class="content">
+                <div class="tag-box d-flex justify-content-end align-items-center">
+                    <div class="tag">INTRODUCING &wedbar;</div>
+                </div>
+
+                <h1>EMAIL FOR <br>DEVELOPERS</h1>
+
+                <P class="description">
+                    The best way to rech humans instead of spam folders. <br>Deliver transactional & marketing emails at
+                    scale.
+                </p>
+
+                <div class="buttons">
+                    <a href="#" class="btn-start">Documentation &gt;</a>
+                    <a href="#" class="btn-main">Get Satrted &gt;</a>
+                </div>
+            </div>
+        </main>
     </div>
 
     <!-- Bootstrap JavaScript Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 </body>
+
 </html>
