--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
     <div class="container">
         <header class="d-flex justify-content-between align-items-center py-3">
-            <h1 class="logo">mcode</h1>
+            <h1 class="logo fst-italic">DELTA</h1>
 
             <nav class="d-flex gap-3">
                 <a href="#" class="text-decoration-none">COMPANIES</a>
@@ -28,22 +28,22 @@
             <button class="btn-sign">SIGN IN</button>
         </header>
 
-        <main class="d-flex flex-column justify-content-center">
+        <main class="d-flex flex-column justify-content-end">
             <div class="content">
-                <div class="tag-box d-flex justify-content-end align-items-center">
+                <div class="tag-box d-flex justify-content-center align-items-center">
                     <div class="tag">INTRODUCING &wedbar;</div>
                 </div>
 
-                <h1>EMAIL FOR <br>DEVELOPERS</h1>
+                <h1>EMAIL FOR<br>DEVELOPERS</h1>
 
                 <P class="description">
                     The best way to rech humans instead of spam folders. <br>Deliver transactional & marketing emails at
                     scale.
                 </p>
 
-                <div class="buttons">
-                    <a href="#" class="btn-start">Documentation &gt;</a>
-                    <a href="#" class="btn-main">Get Satrted &gt;</a>
+                <div class="buttons d-flex gap-1">
+                    <a href="#" class="btn-main">Documentation &gt;</a>
+                    <a href="#" class="btn-start">Get Started &gt;</a>
                 </div>
             </div>
         </main>
@@ -51,6 +51,9 @@
 
     <!-- Bootstrap JavaScript Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+
+    <script type="module" src="https://unpkg.com/@splinetool/viewer@1.9.82/build/spline-viewer.js"></script>
+    <spline-viewer url="https://prod.spline.design/tS0q91dpPNUiUs7H/scene.splinecode"></spline-viewer>
 </body>
 
 </html>
