--- a/index.html
+++ b/index.html
@@ -27,33 +27,44 @@
 
             <button class="btn-sign">SIGN IN</button>
         </header>
+    </div>
 
-        <main class="d-flex flex-column justify-content-end">
-            <div class="content">
-                <div class="tag-box d-flex justify-content-center align-items-center">
-                    <div class="tag">INTRODUCING &wedbar;</div>
-                </div>
+    <main class="container d-flex flex-row justify-content-between">
+        <div class="row">
+            <!-- Content Section -->
+            <div class="col-sm-12 col-md-6">
+                <div class="content">
+                    <div class="tag-box d-flex justify-content-center align-items-center">
+                        <div class="tag">INTRODUCING &wedbar;</div>
+                    </div>
 
-                <h1>EMAIL FOR<br>DEVELOPERS</h1>
+                    <h1>EMAIL FOR<br>DEVELOPERS</h1>
 
-                <P class="description">
-                    The best way to rech humans instead of spam folders. <br>Deliver transactional & marketing emails at
-                    scale.
-                </p>
+                    <p class="description">
+                        The best way to reach humans instead of spam folders. <br>Deliver transactional & marketing emails at
+                        scale.
+                    </p>
 
-                <div class="buttons d-flex gap-1">
-                    <a href="#" class="btn-main">Documentation &gt;</a>
-                    <a href="#" class="btn-start">Get Started &gt;</a>
+                    <div class="buttons d-flex gap-1">
+                        <a href="#" class="btn-main">Documentation &gt;</a>
+                        <a href="#" class="btn-start">Get Started &gt;</a>
+                    </div>
                 </div>
             </div>
-        </main>
-    </div>
+
+            <!-- Robot Section -->
+            <div class="col-sm-12 col-md-6">
+                <spline-viewer class="robot d-flex flex-row justify-content-end" 
+                url="https://prod.spline.design/tS0q91dpPNUiUs7H/scene.splinecode"></spline-viewer>
+            </div>
+        </div>
+    </main>
 
     <!-- Bootstrap JavaScript Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 
     <script type="module" src="https://unpkg.com/@splinetool/viewer@1.9.82/build/spline-viewer.js"></script>
-    <spline-viewer url="https://prod.spline.design/tS0q91dpPNUiUs7H/scene.splinecode"></spline-viewer>
+
 </body>
 
 </html>
